terminado falta comentar

--- a/src/main/java/pantalla/PantallaCliente.form
+++ b/src/main/java/pantalla/PantallaCliente.form
@@ -45,7 +45,7 @@
                           <Group type="102" alignment="0" attributes="0">
                               <Component id="columna" min="-2" pref="149" max="-2" attributes="0"/>
                               <EmptySpace max="32767" attributes="0"/>
-                              <Component id="eviar" min="-2" pref="92" max="-2" attributes="0"/>
+                              <Component id="enviar" min="-2" pref="92" max="-2" attributes="0"/>
                           </Group>
                           <Group type="102" attributes="0">
                               <EmptySpace min="255" pref="255" max="-2" attributes="0"/>
@@ -90,7 +90,7 @@
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="fila" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="columna" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="eviar" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="enviar" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <Component id="idcliente" min="-2" pref="31" max="-2" attributes="0"/>
               </Group>
@@ -143,12 +143,12 @@
         <Property name="text" type="java.lang.String" value="COLUMNA"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JButton" name="eviar">
+    <Component class="javax.swing.JButton" name="enviar">
       <Properties>
         <Property name="text" type="java.lang.String" value="Enviar"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="eviarActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="enviarActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JButton" name="salir">
